@@ -1,26 +1,23 @@
 package com.sscn.library.service;
 
 import com.sscn.library.entity.Book;
+import com.sscn.library.exception.DuplicateValueException;
 import com.sscn.library.exception.NotFoundException;
 import com.sscn.library.repository.BookRepository;
-import org.springframework.cglib.core.Local;
+import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
 
 import java.time.LocalDate;
 import java.util.List;
-import java.util.Optional;
 
 @Service
 public class BookService {
 
     private final BookRepository bookRepository;
 
+    @Autowired
     public BookService(BookRepository bookRepository){
         this.bookRepository = bookRepository;
-    }
-
-    public Book addBook(Book book){
-        return bookRepository.save(book);
     }
 
     public List<Book> getAllBooks(){
@@ -28,36 +25,77 @@ public class BookService {
     }
 
     public Book getBookByIsbn(String isbn){
-        return bookRepository.findByIsbn(isbn).orElseThrow(() -> new NotFoundException(String.format("Book with isbn %s is not found.", isbn)));
+        return bookRepository.findByIsbn(isbn).orElseThrow(() -> new NotFoundException(String.format("No book with isbn %s exists.", isbn)));
+    }
+
+    public List<Book> getBooksByTitle(String title) {
+        return bookRepository.findAllByTitle(title).orElseThrow(() -> new NotFoundException("No book titled %s exists.".formatted(title)));
+    }
+
+    public List<Book> getBooksByDatePurchased(LocalDate datePurchased) {
+        return bookRepository.findAllByDatePurchased(datePurchased).orElseThrow(() -> new NotFoundException("No book was purchased on %s.".formatted(datePurchased)));
+    }
+
+    public Book addBook(Book book){
+        if(bookRepository.existsByIsbn(book.getIsbn()))
+            throw new DuplicateValueException("Book %s already exists.".formatted(book.getIsbn()));
+
+        return bookRepository.save(book);
+    }
+
+    public List<Book> addBooks(List<Book> books) {
+        books.forEach(this::addBook);
+
+        return books;
     }
 
     public Book updateBook(Book newBook, String isbn) {
         Book oldBook = getBookByIsbn(isbn);
 
-        if(!newBook.getTitle().isEmpty())
+        if(newBook.getTitle() != null && !newBook.getTitle().isEmpty())
             oldBook.setTitle(newBook.getTitle());
 
-        if(newBook.getAvailableCopies() >= 0)
+        if(newBook.getAvailableCopies() != null && newBook.getAvailableCopies() >= 0)
             oldBook.setAvailableCopies(newBook.getAvailableCopies());
 
-        if(newBook.getTotalCopies() >= 0)
+        if(newBook.getTotalCopies() != null && newBook.getTotalCopies() >= 0)
             oldBook.setTotalCopies(newBook.getTotalCopies());
 
-        if(newBook.getDatePurchased().isBefore(LocalDate.now()) || newBook.getDatePurchased().isEqual(LocalDate.now()))
+        if(newBook.getDatePurchased() != null && (newBook.getDatePurchased().isBefore(LocalDate.now()) || newBook.getDatePurchased().isEqual(LocalDate.now())))
             oldBook.setDatePurchased(newBook.getDatePurchased());
 
-        if(!newBook.getAuthors().isEmpty())
+        if(newBook.getAuthors() != null && !newBook.getAuthors().isEmpty())
             oldBook.setAuthors(newBook.getAuthors());
 
         return bookRepository.save(oldBook);
     }
 
-    public void deleteBookByIsbn(String isbn){
-        bookRepository.deleteByIsbn(isbn);
+    public void deleteBook(Book book) {
+        if(!bookRepository.existsByIsbn(book.getIsbn()))
+            throw new NotFoundException("Cannot delete book %s because it doesn't exist.".formatted(book.getIsbn()));
+
+        bookRepository.delete(book);
     }
 
-    public void removeAllBooks(){
+    public void deleteBookByIsbn(String isbn){
+
+        deleteBook(getBookByIsbn(isbn));
+
+//        bookRepository.deleteByIsbn(isbn);
+    }
+
+    public void deleteAllBooks(){
         bookRepository.deleteAll();
     }
 
+    public void deleteBooksByTitle(String title) {
+
+        getBooksByTitle(title).forEach(this::deleteBook);
+
+//        bookRepository.deleteAllByTitle(title);
+    }
+
+    public void deleteBooksByDatePurchased(LocalDate datePurchased) {
+        getBooksByDatePurchased(datePurchased).forEach(this::deleteBook);
+    }
 }
